syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "MeetingGrpc.Protos";

package MeetingGrpc.Protos;


service Chat 
{ 
	rpc MessagesSubscribe(google.protobuf.Empty) returns (stream LobbyMessageAction);
	rpc SendMessage(MessageRequest) returns (google.protobuf.Empty);
}

message MessageRequest 
{
	string messageGuid = 1;
	string message = 2;
}

message MessageResponse 
{
	string messageGuid = 1;
	google.protobuf.Timestamp time = 2;
}

enum MessageAction
{
	MESSAGE_ACTION_ADDED = 0;
	MESSAGE_ACTION_REMOVED = 1;
	MESSAGE_ACTION_CHANGED = 2;
}

message LobbyMessageAction
{
	MessageAction Action = 1;
	LobbyMessage lobbyMessage = 2;
}

message LobbyMessage
{
	string username = 1;
	string userGuid = 2;
	string message = 3;
	string messageGuid = 4;
	google.protobuf.Timestamp time = 5;
}
